2016-02-23  Youri Hoogstrate
	* v1.6.0
	  - Many changes in the way of dealing with multiloops.
	  - Additional test cases
	    * Functional tests comparing with results found with mfold/unafold/vienna
	  - Removal of @date tags because it's a pair to keep up to date and github has the blame functionality
	  - Stricter implementation of the c++11/c++14 standard

2016-02-09  Youri Hoogstrate
	* v1.5.0
	  - Issue of leaking energy from paired into unpaired structures
	    without folding as such

2016-02-05  Youri Hoogstrate
	* v1.4.0
	  - Different Segment parameter table (fits SNORD-115 and SNORD-116)
	    reinstallation is required to overwrite the previous file

2016-02-03  Youri Hoogstrate
	 - Added --randomize function to energy estimation utility

2016-02-01  Youri Hoogstrate
	* v1.3.1
	  - Added a variable to the output indicating the number of used Segment(Loop)s in the structure
	  - Set infinity to the maximum size of a float
	  - Changes to the energy / parameters estimation utilities

2016-01-22  Youri Hoogstrate
	* v1.3.0
	  - Traceback algorithm rewritten (sparser, faster)
	    * Removal of 4 other matrices
	    * Setting values in the Traceback matrix also required changes to V() and W()
	  - Solved issue in w()
	  - Improved recusion of V() and W()
	  - Solved all -Wconversion and other warnings/errors which are now strictly checked in DEBUG mode and by travis
	  - Replaced min()-macro for std::min()
	  - Replaced std::atof(str.c_str()) for std::stof()
	  - Moved certain checks that should never happen to DEBUG mode only to make RELEASE faster
	  - Reading from file streams will terminate if an error occurs

2016-01-20  Youri Hoogstrate
	* v1.2.1
	  - Pairing object: reduced memory footprint and small speed improvement

2015-12-09  Youri Hoogstrate
	 - Code cleanup
	 - Removal of functions that did not make use of Pair objects

2015-12-07  Youri Hoogstrate
	* v1.2.0
	  - Full support for SegmentLoops