@@ -1,13 +1,11 @@
 /**
  * @file include/DotBracket.hpp
  *
- * @date 2016-01-20
- *
  * @author Youri Hoogstrate
  *
  * @section LICENSE
  * segmentation-fold can predict RNA 2D structures including K-turns.
- * Copyright (C) 2012-2015 Youri Hoogstrate
+ * Copyright (C) 2012-2016 Youri Hoogstrate
  *
  * This file is part of segmentation-fold and originally taken from
  * yh-kt-fold.
@@ -43,8 +41,6 @@
  *
  * Specification of the file format:
  * <a href="https://wiki.galaxyproject.org/Learn/Datatypes#Dbn">https://wiki.galaxyproject.org/Learn/Datatypes#Dbn</a>
- *
- * @date 2016-01-20
  */
 class DotBracket
 {
