@@ -1,7 +1,6 @@
 /**
  * @file src/ScoringMatrix.cpp
  *
- *
  * @author Youri Hoogstrate
  *
  * @section LICENSE
@@ -115,12 +114,8 @@ signed int ScoringMatrix<T>::get_position(Pair &p)
 	signed int output;
 	
 	
-	//printf(" *       {%i,%i}\n",p.first,p.second);
-	
 	if(p.first < this->grid_size && p.second < this->grid_size)
 	{
-		//printf(" **      {%i,%i}\n",p.first,p.second);
-		
 		if(p.second == p.first || (p.first - 1) == p.second)			// The first 2 diagonals get -1 because they use a pre-defined variable
 		{
 			return -1;
@@ -131,14 +126,10 @@ signed int ScoringMatrix<T>::get_position(Pair &p)
 			size_t bottom = this->number_of_elements(r);
 			size_t row = (this->grid_size - 1) - p.second;
 			
-			//printf(" *-      {%i,%i}\n",p.first,p.second);
-			
 			///@todo change tis into size_t, and if out of bounds have to be returned, change this to MAX VALsize_t -1 and MAX VAL size_t -2
 			return (signed int) this->m.size() - (signed int) bottom - (signed int) row - 1;
 		}
 	}
-	
-	//printf(" *?      {%i,%i}\n",p.first,p.second);
 	
 	// The out of bound may never occur in a good implementation of the algorithm
 	throw std::invalid_argument("ScoringMatrix::get_position: Out of bound (" + std::to_string(p.first)  + "," + std::to_string(p.second)  + ")");
@@ -172,7 +163,6 @@ signed int ScoringMatrix<T>::get_position(Pair &p)
 /**
  * @brief Sets a value in the matrix
  *
- *
  * @todo Check whether diagonals are initiated; it takes unnecessairy computations
  */
 template <class T>
@@ -198,7 +188,6 @@ void ScoringMatrix<T>::set(Pair &pair, T arg_value)
 
 /**
  * @brief Returns the number of reserved elements in the vector
- *
  */
 template <class T>
 size_t ScoringMatrix<T>::size(void)
@@ -223,7 +212,6 @@ size_t ScoringMatrix<T>::size(void)
  *
  * Using the formula:
  * \f$s = \frac{n-1}{2} \times n\f$
- *
  *
  * @note "((n - 1) * n) / 2" works, while "((n - 1) / 2) * n" does not because of floating point divisions
  */
