@@ -1,12 +1,11 @@
 /**
  * @file test/Nucleotide_test.cpp
  *
- *
  * @author Youri Hoogstrate
  *
  * @section LICENSE
  * segmentation-fold can predict RNA 2D structures including K-turns.
- * Copyright (C) 2012-2015 Youri Hoogstrate
+ * Copyright (C) 2012-2016 Youri Hoogstrate
  *
  * This file is part of segmentation-fold.
  *
@@ -42,7 +41,6 @@ BOOST_AUTO_TEST_SUITE(Testing)
  * @brief Tests whether Nucleotides correctly separate
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test_equality)
 {
@@ -80,11 +78,12 @@ BOOST_AUTO_TEST_CASE(Test_equality)
 	BOOST_CHECK(Nucleotide::T != Nucleotide::G);
 }
 
+
+
 /**
  * @brief Tests whether the size of a Nucleotide stuct is indeed 1 byte
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test_size)
 {
