@@ -1,12 +1,11 @@
 /**
  * @file test/Pairing_test.cpp
  *
- *
  * @author Youri Hoogstrate
  *
  * @section LICENSE
  * segmentation-fold can predict RNA 2D structures including K-turns.
- * Copyright (C) 2012-2015 Youri Hoogstrate
+ * Copyright (C) 2012-2016 Youri Hoogstrate
  *
  * This file is part of segmentation-fold.
  *
@@ -41,7 +40,6 @@ BOOST_AUTO_TEST_SUITE(Testing)
 
 /**
  * @brief Tests whether the is_canonical() function works
- *
  *
  * @test
  */
