@@ -1,13 +1,12 @@
 /**
  * @file test/SegmentTraceback_test.cpp
  *
- *
  * @author Youri Hoogstrate
  *
  * @section LICENSE
  * <PRE>
  * segmentation-fold can predict RNA 2D structures including K-turns.
- * Copyright (C) 2012-2015 Youri Hoogstrate
+ * Copyright (C) 2012-2016 Youri Hoogstrate
  *
  * This file is part of segmentation-fold.
  *
@@ -48,7 +47,6 @@ BOOST_AUTO_TEST_SUITE(Testing)
  * @brief Tests the Segment::size() function
  *
  * @test Tests Segment::size() and whether it doesn't get affected by popping
- *
  */
 BOOST_AUTO_TEST_CASE(Test_1)
 {
@@ -75,7 +73,6 @@ BOOST_AUTO_TEST_CASE(Test_1)
  * @brief Tests Segment::size() and whether it doesn't get affected by popping
  *
  * @test Segment::size()
- *
  */
 BOOST_AUTO_TEST_CASE(Test_2)
 {
@@ -102,7 +99,6 @@ BOOST_AUTO_TEST_CASE(Test_2)
  * @brief Tests Segment::size() and whether it doesn't get affected by popping
  *
  * @test Segment::size()
- *
  */
 BOOST_AUTO_TEST_CASE(Test_3)
 {
@@ -127,7 +123,6 @@ BOOST_AUTO_TEST_CASE(Test_3)
 
 /**
  * @brief Tests the Segment::pop() function
- *
  *
  * @test Segment::traceback()
  *
