@@ -1,12 +1,11 @@
 /**
  * @file test/SegmentTree_test.cpp
  *
- *
  * @author Youri Hoogstrate
  *
  * @section LICENSE
  * segmentation-fold can predict RNA 2D structures including K-turns.
- * Copyright (C) 2012-2015 Youri Hoogstrate
+ * Copyright (C) 2012-2016 Youri Hoogstrate
  *
  * This file is part of segmentation-fold.
  *
@@ -54,7 +53,6 @@ BOOST_AUTO_TEST_SUITE(Testing)
  * @brief Tests quering using a SubSequence element instead of deep copied sub sequences
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test1)
 {
@@ -112,11 +110,12 @@ BOOST_AUTO_TEST_CASE(Test1)
 	BOOST_CHECK(segment_query != nullptr);
 }
 
+
+
 /**
  * @brief Tests if searching a 0 size tree properly returns a nullptr
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test2)
 {
@@ -154,11 +153,12 @@ BOOST_AUTO_TEST_CASE(Test2)
 	BOOST_CHECK(segment_query01 == nullptr);
 }
 
+
+
 /**
  * @brief Tests if for a tree with 1 element searching works
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test3)
 {
@@ -209,11 +209,12 @@ BOOST_AUTO_TEST_CASE(Test3)
 	BOOST_CHECK(&segment_01 == segment_query01);
 }
 
+
+
 /**
  * @brief Tests if 2 sized tree searching works
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test4)
 {
@@ -279,11 +280,12 @@ BOOST_AUTO_TEST_CASE(Test4)
 	BOOST_CHECK(segment_02.name != segment_query01->name);
 }
 
+
+
 /**
  * @brief Tests if for 5 sized trees (with elements of different sizes and equences) searching works, in all possible orders of being added
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test5)
 {
@@ -447,11 +449,12 @@ BOOST_AUTO_TEST_CASE(Test5)
 	BOOST_CHECK(segment_tree.search(segment_xx_5p , segment_xx_3p) == nullptr);
 }
 
+
+
 /**
  * @brief Tests whether an exception is raised if a segment with a duplicate sequence is added
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test6)
 {
@@ -475,11 +478,12 @@ BOOST_AUTO_TEST_CASE(Test6)
 	BOOST_CHECK_THROW(segment_tree.insert(segment_02), std::invalid_argument);
 }
 
+
+
 /**
  * @brief Tests whether a reverse complement Segment does not throw an exception
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test7)
 {
