@@ -1,12 +1,11 @@
 /**
  * @file test/Sequence_test.cpp
  *
- *
  * @author Youri Hoogstrate
  *
  * @section LICENSE
  * segmentation-fold can predict RNA 2D structures including K-turns.
- * Copyright (C) 2012-2015 Youri Hoogstrate
+ * Copyright (C) 2012-2016 Youri Hoogstrate
  *
  * This file is part of segmentation-fold.
  *
@@ -43,7 +42,6 @@ BOOST_AUTO_TEST_SUITE(Testing)
  * @brief Tests whether single nucleotides are inserted correctly, and whether the size of the sequence fits.
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test01)
 {
@@ -74,11 +72,12 @@ BOOST_AUTO_TEST_CASE(Test01)
 	BOOST_CHECK_EQUAL(s[7], Nucleotide::G);
 }
 
+
+
 /**
  * @brief Checks std::string to Sequence and Sequence to std::string conversion
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test02)
 {
@@ -98,11 +97,12 @@ BOOST_AUTO_TEST_CASE(Test02)
 	BOOST_CHECK(s2_str.compare(s4.str()) == 0);
 }
 
+
+
 /**
  * @brief Tests behaviour of unexpected bases char-wise: should throw an exception
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test03)
 {
@@ -134,11 +134,12 @@ BOOST_AUTO_TEST_CASE(Test03)
 	}
 }
 
+
+
 /**
  * @brief Tests behaviour of unexpected bases using entire strings: should throw an exception
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test04)
 {
@@ -171,6 +172,8 @@ BOOST_AUTO_TEST_CASE(Test04)
 		}
 	}
 }
+
+
 
 /**
  *
@@ -232,11 +235,12 @@ BOOST_AUTO_TEST_CASE(Test05)
 	BOOST_CHECK((s5  < s1) == false);
 }
 
+
+
 /**
  * @brief Tests the '==' operator
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test06)
 {
@@ -269,9 +273,10 @@ BOOST_AUTO_TEST_CASE(Test06)
 	BOOST_CHECK((s1 == s6) == false);
 }
 
+
+
 /**
  * @brief Tests the subseq function
- *
  */
 BOOST_AUTO_TEST_CASE(Test07)
 {
@@ -316,7 +321,6 @@ BOOST_AUTO_TEST_CASE(Test07)
 
 /**
  * @brief Valgrind check
- *
  */
 BOOST_AUTO_TEST_CASE(Test08)
 {
@@ -326,12 +330,10 @@ BOOST_AUTO_TEST_CASE(Test08)
 
 
 
-
 /**
  * @brief Tests Sequence::compare(&Sequence)
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test09)
 {
@@ -375,7 +377,6 @@ BOOST_AUTO_TEST_CASE(Test09)
  * @brief Tests Sequence::ssubseq and Sequence::compare(&SubSequence)
  *
  * @test
- *
  */
 BOOST_AUTO_TEST_CASE(Test10)
 {
